--- a/.gitignore
+++ b/.gitignore
@@ -161,7 +161,9 @@ cython_debug/
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
 
+temp/
 musdb18/
-checkpoint/
+checkpoints/
 result/
+
 musdb18hq.zip
